# serializer version: 1
# name: test_async_migrate_entry_adds_manual_properties
  ConfigEntrySnapshot({
    'data': dict({
      'client_device_id': '123',
      'token': 'abc',
    }),
    'disabled_by': None,
    'discovery_keys': dict({
    }),
    'domain': 'surepcha',
    'entry_id': <ANY>,
    'minor_version': 2,
    'options': dict({
      'devices': dict({
        '12345': dict({
          'name': 'Test Device',
          'product_id': 1,
        }),
      }),
      'properties': dict({
        'manual_properties': dict({
          'location_inside': 'Home',
          'location_outside': 'Away',
        }),
      }),
    }),
    'pref_disable_new_entities': False,
    'pref_disable_polling': False,
    'source': 'user',
    'subentries': list([
    ]),
    'title': 'Test SurePetCare entry',
    'unique_id': '12345',
    'version': 1,
  })
# ---
# name: test_options_flow_full
  FlowResultSnapshot({
    'context': mappingproxy({
    }),
    'data': dict({
      'devices': dict({
        '1299453': dict({
          'location_inside': 'Kitchen',
          'location_outside': 'Garden',
          'name': 'DualScanConnect door',
          'polling_speed': 120,
          'product_id': <ProductId.DUAL_SCAN_CONNECT: 6>,
        }),
        '269654': dict({
          'name': 'Feeder',
          'product_id': <ProductId.FEEDER_CONNECT: 4>,
        }),
        '727608': dict({
          'name': 'PetDoor',
          'product_id': <ProductId.PET_DOOR: 3>,
        }),
      }),
      'properties': dict({
        'manual_properties': dict({
          'location_inside': 'Home',
          'location_outside': 'Away',
        }),
      }),
    }),
    'description': None,
    'description_placeholders': None,
    'flow_id': <ANY>,
    'handler': None,
    'title': '',
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
  })
# ---
# name: test_options_flow_full.1
  ConfigEntrySnapshot({
    'data': dict({
      'client_device_id': '123',
      'token': 'abc',
    }),
    'disabled_by': None,
    'discovery_keys': dict({
    }),
    'domain': 'surepcha',
    'entry_id': <ANY>,
    'minor_version': 1,
    'options': dict({
      'devices': dict({
        '1299453': dict({
          'location_inside': 'Home',
          'location_outside': 'Away',
          'name': 'DualScanConnect door',
          'product_id': <ProductId.DUAL_SCAN_CONNECT: 6>,
        }),
        '269654': dict({
          'name': 'Feeder',
          'product_id': <ProductId.FEEDER_CONNECT: 4>,
        }),
        '727608': dict({
          'name': 'PetDoor',
          'product_id': <ProductId.PET_DOOR: 3>,
        }),
      }),
      'properties': dict({
        'manual_properties': dict({
          'location_inside': 'Home',
          'location_outside': 'Away',
        }),
      }),
    }),
    'pref_disable_new_entities': False,
    'pref_disable_polling': False,
    'source': 'user',
    'subentries': list([
    ]),
    'title': 'Test SurePetCare entry',
    'unique_id': '12345',
    'version': 1,
  })
# ---
# name: test_reconfiguration_flow
  ConfigEntrySnapshot({
    'data': dict({
      'client_device_id': '123',
      'token': 'abc',
    }),
    'disabled_by': None,
    'discovery_keys': dict({
    }),
    'domain': 'surepcha',
    'entry_id': <ANY>,
    'minor_version': 1,
    'options': dict({
      'devices': dict({
        '1299453': dict({
          'name': 'Katzenklappe',
          'product_id': 6,
        }),
        '22222': dict({
          'name': 'Feeder with different fill percent',
          'product_id': 4,
        }),
        '222222': dict({
          'name': 'Pet with empty status',
          'product_id': 0,
        }),
        '260093': dict({
          'name': None,
          'product_id': 3,
        }),
        '269654': dict({
          'name': 'Maui matlåda (old) ',
          'product_id': 4,
        }),
        '295972': dict({
          'name': 'Hem-hub',
          'product_id': 1,
        }),
        '333333': dict({
          'name': 'Pet with only one change on status',
          'product_id': 0,
        }),
        '472721': dict({
          'name': 'Maui',
          'product_id': 0,
        }),
        '532070': dict({
          'name': 'Ajax',
          'product_id': 0,
        }),
        '727608': dict({
          'name': 'Laundry Door',
          'product_id': 3,
        }),
        '734730': dict({
          'name': 'Poseidon connect',
          'product_id': 8,
        }),
      }),
    }),
    'pref_disable_new_entities': False,
    'pref_disable_polling': False,
    'source': 'user',
    'subentries': list([
    ]),
    'title': 'Test SurePetCare entry',
    'unique_id': '12345',
    'version': 1,
  })
# ---
# name: test_user_flow
  FlowResultSnapshot({
    'context': dict({
      'source': 'user',
    }),
    'data': dict({
      'client_device_id': 'mocked_device_id',
      'token': 'mocked_token',
    }),
    'description': None,
    'description_placeholders': None,
    'flow_id': <ANY>,
    'handler': 'surepcha',
    'minor_version': 3,
    'options': dict({
      'devices': dict({
        '1299453': dict({
          'name': 'Katzenklappe',
          'product_id': 6,
        }),
        '22222': dict({
          'name': 'Feeder with different fill percent',
          'product_id': 4,
        }),
        '222222': dict({
          'name': 'Pet with empty status',
          'product_id': 0,
        }),
        '260093': dict({
          'name': None,
          'product_id': 3,
        }),
        '269654': dict({
          'name': 'Maui matlåda (old) ',
          'product_id': 4,
        }),
        '295972': dict({
          'name': 'Hem-hub',
          'product_id': 1,
        }),
        '333333': dict({
          'name': 'Pet with only one change on status',
          'product_id': 0,
        }),
        '472721': dict({
          'name': 'Maui',
          'product_id': 0,
        }),
        '532070': dict({
          'name': 'Ajax',
          'product_id': 0,
        }),
        '727608': dict({
          'name': 'Laundry Door',
          'product_id': 3,
        }),
        '734730': dict({
          'name': 'Poseidon connect',
          'product_id': 8,
        }),
      }),
    }),
    'result': ConfigEntrySnapshot({
      'data': dict({
        'client_device_id': 'mocked_device_id',
        'token': 'mocked_token',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'surepcha',
      'entry_id': <ANY>,
      'minor_version': 3,
      'options': dict({
        'devices': dict({
          '1299453': dict({
            'name': 'Katzenklappe',
            'product_id': 6,
          }),
          '22222': dict({
            'name': 'Feeder with different fill percent',
            'product_id': 4,
          }),
          '222222': dict({
            'name': 'Pet with empty status',
            'product_id': 0,
          }),
          '260093': dict({
            'name': None,
            'product_id': 3,
          }),
          '269654': dict({
            'name': 'Maui matlåda (old) ',
            'product_id': 4,
          }),
          '295972': dict({
            'name': 'Hem-hub',
            'product_id': 1,
          }),
          '333333': dict({
            'name': 'Pet with only one change on status',
            'product_id': 0,
          }),
          '472721': dict({
            'name': 'Maui',
            'product_id': 0,
          }),
          '532070': dict({
            'name': 'Ajax',
            'product_id': 0,
          }),
          '727608': dict({
            'name': 'Laundry Door',
            'product_id': 3,
          }),
          '734730': dict({
            'name': 'Poseidon connect',
            'product_id': 8,
          }),
        }),
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': 'SurePetCare Devices',
      'unique_id': None,
      'version': 1,
    }),
    'subentries': tuple(
    ),
    'title': 'SurePetCare Devices',
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
    'version': 1,
  })
# ---
